<resources>
    <string name="app_name">sudo</string>
    <string name="start_game">NEW GAME</string>
    <string name="resume_game">RESUME</string>
    <string name="common_sure">确定</string>
    <string name="common_cancel">取消</string>
    <string name="default_take_time">-- : -- : --</string>
    <string name="support_describe">&#160;&#160;&#160;&#160;本数独App完全由个人设计开发完成，开发简约实用的工具类和小游戏是个人业余爱好，您的支持将给予开发者源源不断的动力！\n
        &#160;&#160;&#160;&#160;您如果有什么建议或者想法，也可以联系我！
    </string>
    <string name="support_contact">vachelx@163.com</string>
    <string name="copy_support_contact">已复制邮件地址</string>
    <string name="contact_string">联系方式: </string>
    <string name="support_developer">支持作者</string>
    <string name="statistics">成绩统计</string>
    <string name="level_list_page">闯关玩法</string>
    <string name="contact_qq">787273366</string>
    <string name="copy_contact_qq">已复制QQ</string>
    <string name="user_suggestions">反馈建议</string>
    <string name="suggestion_describe">无论您有任何想法或建议，都可以提交上来，我会认真的考虑并不断的改进！</string>
    <string name="tips_hint_input">请输入您的建议</string>
    <string name="user_contact_text">联系方式（选填）</string>
    <string name="hint_text_your_contacts">Email/QQ/微信/电话均可</string>
    <string name="submit_suggestion">提 交</string>
    <string name="network_error">网络不可用，稍后再试！</string>
    <string name="check_suggestion_empty">建议不能为空</string>
    <string name="submit_success">提交成功，感谢您的建议！</string>
    <string name="submit_failed">提交失败，请稍后再试！</string>
</resources>
