<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_title_bar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="@dimen/default_padding"
        android:background="@color/main_blue">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:padding="8dp"
            android:src="@drawable/selector_arrow_back"
            app:layout_constraintBottom_toBottomOf="@id/root_title_bar"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/support_developer"
            android:textColor="@color/white"
            android:textSize="@dimen/xx_large_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/back_icon"
            app:layout_constraintLeft_toRightOf="@id/back_icon"
            app:layout_constraintTop_toTopOf="@id/back_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:text="@string/support_describe"
        android:textColor="@color/default_text_color"
        android:textSize="@dimen/large_text_size"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/support_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="打赏"
        android:layout_marginTop="30dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/blue_btn_selector"
        android:textColor="@color/white"
        android:textSize="@dimen/x_large_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/contact_string"
            android:textColor="@color/default_text_color" />

        <TextView
            android:id="@+id/contact_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/support_contact" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="QQ: "
            android:textColor="@color/default_text_color" />

        <TextView
            android:id="@+id/contact_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="none"
            android:textColor="@color/main_blue"
            android:text="@string/contact_qq" />
    </LinearLayout>

</LinearLayout>